--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -4,6 +4,19 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
   }
 }
 
+.dashboard {
+  padding: 2px;
+  .column {
+    padding: 3px;
+  }
+  .panel {
+    margin-bottom: 6px;
+    &-body {
+      margin: 5px;
+    }
+  }
+}
+
 // button size into dashboard title
 .dashboard__title {
   .btn-link {
